update ramdom coins

--- a/src/pages/fotune-detail/fotune-detail.html
+++ b/src/pages/fotune-detail/fotune-detail.html
@@ -108,7 +108,7 @@
     <div class="height-56 a1-relative a3-container a3-justify-between">
         <div class="btn">
             <div class="btn-more">
-                <img src="assets/image/btn_more_1.png">
+                <a href="https://play.google.com/store/apps/dev?id=8988959007894361415&hl=vi"> <img src="assets/image/btn_more_1.png"></a>
             </div>
         </div>
         <div style="width: 60%" class="a1-container">
@@ -118,7 +118,7 @@
         </div>
         <div class="btn">
             <div class="btn-facebook ">
-                <img src="assets/image/btn_facebook_1.png">
+                <a href="https://www.facebook.com/groups/123547708286399/"><img src="assets/image/btn_facebook_1.png"></a>
             </div>
         </div>
         <div class="bot_bar"></div>
