--- a/src/pages/fotune-detail/fotune-detail.html
+++ b/src/pages/fotune-detail/fotune-detail.html
@@ -111,9 +111,12 @@
                 <a href="https://play.google.com/store/apps/dev?id=8988959007894361415&hl=vi"> <img src="assets/image/btn_more_1.png"></a>
             </div>
         </div>
-        <div style="width: 60%" class="a1-container">
+        <div style="width: 60%" class="a1-relative">
             <div class="btn-back" (click)="closeView()">
                 <img src="assets/image/btn_back_2.png">
+            </div>
+            <div class="btn-detail" (click)="viewDetail()">
+                <img src="assets/image/btn_detail_2.png">
             </div>
         </div>
         <div class="btn">
