Fix Home, Add Plugins

--- a/src/pages/fotune-detail/fotune-detail.html
+++ b/src/pages/fotune-detail/fotune-detail.html
@@ -112,10 +112,10 @@
             </div>
         </div>
         <div style="width: 60%" class="a1-relative">
-            <div class="btn-back" (click)="closeView()">
+            <div class="btn-back" tappable (click)="closeView()">
                 <img src="assets/image/btn_back_2.png">
             </div>
-            <div class="btn-detail" (click)="viewDetail()">
+            <div class="btn-detail" tappable (click)="viewDetail()">
                 <img src="assets/image/btn_detail_2.png">
             </div>
         </div>
