--- a/src/pages/fotune-info/fotune-info.html
+++ b/src/pages/fotune-info/fotune-info.html
@@ -57,7 +57,7 @@
         <div class="frame-btn a3-container">
             <div class="btn">
                 <div class="btn-back a1-relative">
-                    <img src="assets/image/btn_back_1.png" (click)="closeView()">
+                    <img src="assets/image/btn_back_1.png" tappable (click)="closeView()">
                 </div>
             </div>
             <div class="btn">
