--- a/src/pages/fotunes-data-details/fotunes-data-details.html
+++ b/src/pages/fotunes-data-details/fotunes-data-details.html
@@ -112,7 +112,7 @@
             </div>
         </div>
         <div style="width: 60%" class="a1-container">
-            <div class="btn-back" (click)="closeView()">
+            <div class="btn-back" tappable (click)="closeView()">
                 <img src="assets/image/btn_back_2.png">
             </div>
         </div>
