--- a/src/pages/fotune-detail/fotune-detail.html
+++ b/src/pages/fotune-detail/fotune-detail.html
@@ -10,7 +10,6 @@
             <div [style.height]="heightLine" class="line" *ngFor="let image of resultLines">
                 <img src="{{image}}">
             </div>
-
         </div>
         <div class="text-container">
             <img src="{{fotune.imageSrc}}">
@@ -20,9 +19,6 @@
 
 <ion-content>
     <div class="a1-container detailPage-container">
-        <div class="frame-background ">
-            <img src="assets/fotunes/image/frame_effect.png">
-        </div>
         <div class="frame_1 ">
             <img src="assets/fotunes/image/frame_1.png">
         </div>
@@ -110,16 +106,15 @@
         <ion-fab>
             <button ion-fab class="btn-fab"></button>
             <ion-fab-list side="top">
-                <div ion-fab class="item-fab-1" (click)="viewInfo()">
+                <div ion-fab class="item-fab-1" (tap)="viewInfo()">
                     <img src="assets/fotunes/image/btn_info_1.png" alt="">
                     <img src="assets/fotunes/image/btn_info_2.png" class="img-info-active">
                 </div>
 
-
-                <a href="https://play.google.com/store/apps/dev?id=8988959007894361415&hl=vi">
+                <a href="https://play.google.com/store/apps/dev?id=8988959007894361415&hl=vi" (tap)="gotoPlayStore()">
                     <div ion-fab class="item-fab-2">
                         <img src="assets/fotunes/image/btn_game_1.png" alt="">
-                        <img src="assets/fotunes/image/btn_game_2.png" class="img-game-active">
+                        <img src="assets/fotunes/image/btn_game_2.png" class="img-game-active" id="imgGameActive">
                     </div>
                 </a>
             </ion-fab-list>
@@ -129,24 +124,24 @@
             <img src="assets/fotunes/image/btn_more_2.png" class="img-more-active">
         </div>
         <div class="notice a1-width-60 a3-container a3-justify-between a1-relative" text-center>
-            <div class="btn-back a1-relative" (click)="closeView()">
+            <div class="btn-back a1-relative" (tap)="closeView()">
                 <img src="assets/fotunes/image/btn_back_1.png" alt="">
                 <img src="assets/fotunes/image/btn_back_2.png" class="btn-back-active">
 
             </div>
             <div style="width: 20px"></div>
-            <div class="btn-detail a1-relative" (click)="viewDetail()">
+            <div class="btn-detail a1-relative" (tap)="viewDetail()">
                 <img src="assets/fotunes/image/btn_detail_1.png" alt="">
                 <img src="assets/fotunes/image/btn_detail_2.png" class="btn-detail-active">
             </div>
         </div>
-        <div class="btn facebook-button a1-width-20" text-right>
 
+        <div class="btn facebook-button a1-width-20" text-right (tap)="goToFaceBook()">
             <a href="https://www.facebook.com/groups/123547708286399/">
                 <img src="assets/fotunes/image/btn_facebook_1.png" alt="">
-                <img src="assets/fotunes/image/btn_facebook_2.png" class="img-facebook-active">
+                <img src="assets/fotunes/image/btn_facebook_2.png" class="img-facebook-active" id="imgFacebookActive">
             </a>
-
         </div>
+
     </div>
 </ion-footer>
