--- a/src/pages/fotunes-data-details/fotunes-data-details.html
+++ b/src/pages/fotunes-data-details/fotunes-data-details.html
@@ -4,8 +4,9 @@
             <div [style.height]="heightLine" class="line" *ngFor="let image of resultLines">
                 <img src="{{image}}">
             </div>
+
         </div>
-        <div class="text-container a3-container-center">
+        <div class="text-container">
             <img src="{{fotune.imageSrc}}">
         </div>
     </div>
@@ -13,9 +14,6 @@
 
 <ion-content>
     <div class="a1-container detailPage-container">
-        <div class="frame-background ">
-            <img src="assets/fotunes/image/frame_effect.png">
-        </div>
         <div class="frame_1 ">
             <img src="assets/fotunes/image/frame_1.png">
         </div>
@@ -31,7 +29,7 @@
                 <div class="attribute-item">
                     <div class="attribute-name a3-container a3-justify-between a3-items-center">
                         <span>Hào 1: </span>
-                        <span><img src="{{resultLines[0]}}" alt=""></span>
+                        <img src="{{resultLines[0]}}" alt="">
                     </div>
                     <div class="attribute-content">
                         <p>{{fotunesDetail.h1}}</p>
@@ -40,7 +38,7 @@
                 <div class="attribute-item">
                     <div class="attribute-name a3-container a3-justify-between a3-items-center">
                         <span>Hào 2: </span>
-                        <span><img src="{{resultLines[1]}}" alt=""></span>
+                        <img src="{{resultLines[1]}}" alt="">
                     </div>
                     <div class="attribute-content">
                         <p>{{fotunesDetail.h2}}</p>
@@ -49,7 +47,7 @@
                 <div class="attribute-item">
                     <div class="attribute-name a3-container a3-justify-between a3-items-center">
                         <span>Hào 3: </span>
-                        <span><img src="{{resultLines[2]}}" alt=""></span>
+                        <img src="{{resultLines[2]}}" alt="">
                     </div>
                     <div class="attribute-content">
                         <p>{{fotunesDetail.h3}}</p>
@@ -58,7 +56,7 @@
                 <div class="attribute-item">
                     <div class="attribute-name a3-container a3-justify-between a3-items-center">
                         <span>Hào 4: </span>
-                        <span><img src="{{resultLines[3]}}" alt=""></span>
+                        <img src="{{resultLines[3]}}" alt="">
                     </div>
                     <div class="attribute-content">
                         <p>{{fotunesDetail.h4}}</p>
@@ -67,7 +65,7 @@
                 <div class="attribute-item">
                     <div class="attribute-name a3-container a3-justify-between a3-items-center">
                         <span>Hào 5: </span>
-                        <span><img src="{{resultLines[4]}}" alt=""></span>
+                        <img src="{{resultLines[4]}}" alt="">
                     </div>
                     <div class="attribute-content">
                         <p>{{fotunesDetail.h5}}</p>
@@ -76,7 +74,7 @@
                 <div class="attribute-item">
                     <div class="attribute-name a3-container a3-justify-between a3-items-center">
                         <span>Hào 6: </span>
-                        <span><img src="{{resultLines[5]}}" alt=""></span>
+                        <img src="{{resultLines[5]}}" alt="">
                     </div>
                     <div class="attribute-content">
                         <p>{{fotunesDetail.h6}}</p>
@@ -109,14 +107,14 @@
         <ion-fab>
             <button ion-fab class="btn-fab"></button>
             <ion-fab-list side="top">
-                <div ion-fab class="item-fab-1" (click)="viewInfo()">
+                <div ion-fab class="item-fab-1" (tap)="viewInfo()">
                     <img src="assets/fotunes/image/btn_info_1.png" alt="">
                     <img src="assets/fotunes/image/btn_info_2.png" class="img-info-active">
                 </div>
-                <a href="https://play.google.com/store/apps/dev?id=8988959007894361415&hl=vi">
+                <a href="https://play.google.com/store/apps/dev?id=8988959007894361415&hl=vi" (tap)="gotoPlayStore()">
                     <div ion-fab class="item-fab-2">
                         <img src="assets/fotunes/image/btn_game_1.png" alt="">
-                        <img src="assets/fotunes/image/btn_game_2.png" class="img-game-active">
+                        <img src="assets/fotunes/image/btn_game_2.png" class="img-game-active" id="imgGameActive">
                     </div>
                 </a>
             </ion-fab-list>
@@ -126,18 +124,16 @@
             <img src="assets/fotunes/image/btn_more_2.png" class="img-more-active">
         </div>
         <div class="notice a1-width-60  a1-relative" text-center>
-            <div class="btn-back a1-relative" (click)="closeView()">
+            <div class="btn-back a1-relative" (tap)="closeView()">
                 <img src="assets/fotunes/image/btn_back_1.png" alt="">
                 <img src="assets/fotunes/image/btn_back_2.png" class="btn-back-active">
             </div>
-
         </div>
-        <div class="btn facebook-button a1-width-20" text-right>
+        <div class="btn facebook-button a1-width-20" text-right (tap)="goToFaceBook()">
             <a href="https://www.facebook.com/groups/123547708286399/">
                 <img src="assets/fotunes/image/btn_facebook_1.png" alt="">
-                <img src="assets/fotunes/image/btn_facebook_2.png" class="img-facebook-active">
+                <img src="assets/fotunes/image/btn_facebook_2.png" class="img-facebook-active" id="imgFacebookActive">
             </a>
-
         </div>
     </div>
 </ion-footer>
