fix splas screen

--- a/src/pages/fotune-info/fotune-info.html
+++ b/src/pages/fotune-info/fotune-info.html
@@ -68,7 +68,7 @@
         <div class="btn">
             <div class="btn-back a1-relative" (tap)="closeView()">
                 <img src="assets/fotunes/image/btn_back_1.png">
-                <img src="assets/fotunes/image/btn_back_2.png" class="btn_back-active">
+                <img src="assets/fotunes/image/btn_back_2.png" class="btn_back-active" id="btnBackActive">
             </div>
         </div>
         <div style="width: 5%"></div>
