Add Ads and remove touch delay

--- a/src/pages/fotune-info/fotune-info.html
+++ b/src/pages/fotune-info/fotune-info.html
@@ -66,7 +66,7 @@
     <div class="a3-container a3-justify-between">
         <div style="width: 25%"></div>
         <div class="btn">
-            <div class="btn-back a1-relative" (tap)="closeView()">
+            <div class="btn-back a1-relative" tappable (click)="closeView()">
                 <img src="assets/fotunes/image/btn_back_1.png">
                 <img src="assets/fotunes/image/btn_back_2.png" class="btn_back-active" id="btnBackActive">
             </div>
@@ -74,7 +74,7 @@
         <div style="width: 5%"></div>
         <div class="btn">
             <div class="btn-contact a1-relative">
-                <a href="https://www.facebook.com/groups/123547708286399/" (tap)="goToFaceBook()">
+                <a href="https://www.facebook.com/groups/123547708286399/" tappable (click)="goToFaceBook()">
                     <img src="assets/fotunes/image/btn_contact_1.png">
                     <img src="assets/fotunes/image/btn_contact_2.png" class="btn_contact-active" id="btnContactActive">
                 </a>
