--- a/src/pages/fotune-home/fotune-home.html
+++ b/src/pages/fotune-home/fotune-home.html
@@ -156,10 +156,10 @@
                     </div>
                 </div>
             </div>
-            <div class="btn_done_1 a1-relative" tappable (tap)="shuffSkeleton()">
+            <div class="btn_done_1 a1-relative" tappable (click)="shuffSkeleton()">
                 <div [class.hideDiv]="isShuffer6" class="numberQue"><span>Hào </span> <span> {{numberQue}}</span></div>
-                <img src="assets/fotunes/image/btn_done_1.png" [class.hideDiv]="isShuffer6">
-                <img src="assets/fotunes/image/btn_done_2.png" [class.hideDiv]="isShuffer6" class="btn-done-active" id="btnDoneActive">
+                <img src="assets/fotunes/image/btn_done_1.png" [class.hideDiv]="isShuffer6" id="btnDone">
+                <!-- <img src="assets/fotunes/image/btn_done_2.png" [class.hideDiv]="isShuffer6" class="btn-done-active" id="btnDoneActive"> -->
             </div>
         </div>
     </div>
@@ -170,35 +170,32 @@
         <div class="background-footer height-footer a3-container a1-relative a1-z-10">
             <div class="a1-absolute botbar1"></div>
             <ion-fab>
-                <button ion-fab class="btn-fab">
+                <button ion-fab class="btn-fab" (click)="activeMore()">
                     <ion-icon name="arrow-dropleft"></ion-icon>
                 </button>
                 <ion-fab-list side="top">
-                    <div ion-fab class="item-fab-1" tappable (tap)="viewInfo()">
+                    <div ion-fab class="item-fab" tappable (click)="viewInfo()">
                         <img src="assets/fotunes/image/btn_info_1.png" alt="">
-                        <img src="assets/fotunes/image/btn_info_2.png" class="img-info-active">
                     </div>
-                    <a href="https://play.google.com/store/apps/dev?id=8988959007894361415&hl=vi" tappable (tap)="gotoPlayStore()">
-                        <div ion-fab class="item-fab-2">
+                    <a href="https://play.google.com/store/apps/dev?id=8988959007894361415&hl=vi" tappable>
+                        <div ion-fab class="item-fab">
                             <img src="assets/fotunes/image/btn_game_1.png" alt="">
-                            <img src="assets/fotunes/image/btn_game_2.png" class="img-game-active" id="imgGameActive">
                         </div>
                     </a>
                 </ion-fab-list>
             </ion-fab>
             <div class="btn more-button a1-width-20" text-left>
                 <img src="assets/fotunes/image/btn_more_1.png" alt="">
-                <img src="assets/fotunes/image/btn_more_2.png" class="img-more-active">
+                <img src="assets/fotunes/image/btn_more_2.png" class="img-more-active" id="imgMoreActive">
             </div>
             <div class="notice a1-width-60 a3-container-center" text-center>
                 <span>Gieo liên tục <span style="color: #f9d96d">6 quẻ</span> để hoàn thành 1 quẻ Bói Dịch</span>
             </div>
 
 
-            <div class="btn facebook-button a1-width-20" text-right tappable (tap)="goToFaceBook()">
+            <div class="btn facebook-button a1-width-20" text-right tappable>
                 <a href="https://www.facebook.com/groups/123547708286399/">
                     <img src="assets/fotunes/image/btn_facebook_1.png" alt="">
-                    <img src="assets/fotunes/image/btn_facebook_2.png" class="img-facebook-active" id="imgFacebookActive">
                 </a>
             </div>
         </div>
