--- a/src/pages/fotune-info/fotune-info.html
+++ b/src/pages/fotune-info/fotune-info.html
@@ -7,8 +7,8 @@
         <div class="a-page-info-content a1-relative">
             <div class="info-background">
                 <div class="info-title">
-                    <p><span style="color:#f2d172; font-family: Mijas-Ultra; font-size:1.4em;">Bói dịch</span> là một phương thuật cổ dùng các Quái tượng trong Kinh dịch làm trọng tâm để dự báo sự việc, con người... Đối tượng dự báo thường là về Thiên thời, nhân sự, gia trạch, hôn nhân, tử tức, mưu
-                        sự, danh chức, tài lộc, xuất hành, tật ách, kiện tụng,…
+                    <p><span style="color:#f2d172; font-family: Mijas-Ultra; font-size:1.4em;">Bói dịch</span> là một phương thuật cổ dùng các Quái tượng trong Kinh dịch làm trọng tâm để dự báo sự việc, con người... Đối tượng dự báo thường là về Thiên thời,
+                        nhân sự, gia trạch, hôn nhân, tử tức, mưu sự, danh chức, tài lộc, xuất hành, tật ách, kiện tụng,…
                     </p>
                 </div>
                 <div class="info-title">
@@ -66,17 +66,15 @@
     <div class="a3-container a3-justify-between">
         <div style="width: 25%"></div>
         <div class="btn">
-            <div class="btn-back a1-relative" tappable (tap)="closeView()">
+            <div class="btn-back a1-relative" tappable (click)="closeView()">
                 <img src="assets/fotunes/image/btn_back_1.png">
-                <img src="assets/fotunes/image/btn_back_2.png" class="btn_back-active" id="btnBackActive">
             </div>
         </div>
         <div style="width: 5%"></div>
         <div class="btn">
             <div class="btn-contact a1-relative">
-                <a href="https://www.facebook.com/groups/123547708286399/" tappable (click)="goToFaceBook()">
+                <a href="https://www.facebook.com/groups/123547708286399/">
                     <img src="assets/fotunes/image/btn_contact_1.png">
-                    <img src="assets/fotunes/image/btn_contact_2.png" class="btn_contact-active" id="btnContactActive">
                 </a>
             </div>
         </div>
