--- a/src/pages/fotune-detail/fotune-detail.html
+++ b/src/pages/fotune-detail/fotune-detail.html
@@ -26,6 +26,7 @@
             <div class="nameInVn a3-container-center">
                 <span class="span-1"> <span>{{fotune.nameInVN.slice(0,1).toUpperCase()}}</span>{{fotune.nameInVN.split('(')[0].substring(1).toLowerCase()}}</span>
             </div>
+            <div style="height: 10px"></div>
             <div class="nameInVn a3-container-center">
                 <span class="span-2">( {{fotune.nameInVN.split('(')[1].replace(")", "")}} )</span>
             </div>
