--- a/src/pages/fotune-detail/fotune-detail.html
+++ b/src/pages/fotune-detail/fotune-detail.html
@@ -131,7 +131,7 @@
         </div>
 
         <div class="btn facebook-button a1-width-20" text-right tappable>
-            <a href="https://www.facebook.com/groups/123547708286399/">
+            <a [href]="facebookUrl">
                 <img src="assets/fotunes/image/btn_facebook_1.png" alt="">
             </a>
         </div>
