--- a/src/pages/fotune-info/fotune-info.html
+++ b/src/pages/fotune-info/fotune-info.html
@@ -73,7 +73,7 @@
         <div style="width: 5%"></div>
         <div class="btn">
             <div class="btn-contact a1-relative">
-                <a href="https://www.facebook.com/groups/123547708286399/">
+                <a [href]="facebookUrl">
                     <img src="assets/fotunes/image/btn_contact_1.png">
                 </a>
             </div>
