--- a/src/pages/fotune-home/fotune-home.html
+++ b/src/pages/fotune-home/fotune-home.html
@@ -1,204 +1,207 @@
 <ion-content class="background-image" no-bounce>
-    <!-- ==================under-ground================= -->
-    <div class="a-page-underground a3-container-center a1-relative">
-        <img src="assets/fotunes/image/large_circle.png" class="large-circle">
 
-        <div class="a1-content-center small-circle" text-center>
-            <img src="assets/fotunes/image/small_circle.png">
+
+  <div class="a-page-uper  a1-relative">
+    <!-- ===========Text============== -->
+    <div class="a-page-title a3-container-center">
+      <div class="a-page-title-effect">
+        <div class="sprite-container">
+          <div class="sprite-animation eff-text-idle-animate ">
+            <div class="sprite-image" *ngFor="let image of effText">
+              <img src="{{image}}">
+            </div>
+          </div>
         </div>
-        <!-- =========plate backgroung============ -->
-        <div class="a1-content-center plate" text-center [class.hideDiv]="isRunShuffe">
-            <img src="assets/fotunes/image/plate.png">
-        </div>
-        <div class="a1-content-center " text-center [class.hideDiv]="isRunShuffe">
-            <div class="a1-content-center plate-coin" [style.height]="containerCoinHeight" [style.width]="containerCoinHeight">
-                <div class="coin">
-                    <img src="{{coins[0]}}">
-                </div>
-                <div class="coin">
-                    <img src="{{coins[1]}}">
-                </div>
-                <div class="coin">
-                    <img src="{{coins[2]}}">
-                </div>
-            </div>
-            <img src="assets/fotunes/image/plate_cover.png" class="a1-relative" id="skeletonCover">
-        </div>
-        <!-- ==============plate animate============ -->
-        <div class="a1-content-center plate hideDiv" [class.showDiv]="isRunShuffe">
-            <div class="sprite-container">
-                <div class="sprite-animation " [class.run-skeleton-animate]="isRunShuffe">
-                    <div class="sprite-image" *ngFor="let image of skeletonPath">
-                        <img src="{{image}}">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-    <div class="a-page-uper  a1-relative">
-        <!-- ===========Text============== -->
-        <div class="a-page-title a3-container-center">
-            <div class="a-page-title-effect">
-                <div class="sprite-container">
-                    <div class="sprite-animation eff-text-idle-animate ">
-                        <div class="sprite-image" *ngFor="let image of effText">
-                            <img src="{{image}}">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <img src="{{fotune.imageSrc}}" class="img-text">
-        </div>
-
-
-        <div class="a-page-result a3-container-center">
-            <!-- ==============line-efff=================== -->
-
-            <div class="a-page-result-effect" [style.width]="widthResulteff">
-                <div class="sprite-container">
-                    <div class="sprite-animation eff-rs-start-animate">
-                        <div class="sprite-image" *ngFor="let image of resultStartPath">
-                            <img src="{{image}}">
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- ==================line-height js in contructor==================== -->
-            <div class="a-page-line-container" (window:resize)="onResize()">
-                <div [style.height]="lineResultHeight" class="line " id="line6">
-                    <img src="assets/fotunes/image/line_bg.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_dynamic_0_1.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_normal_0_1.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_normal_1_1.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_dynamic_1_1.png" class="img-normal">
-                    <!-- <div class="line-white">
-                        <img src="assets/fotunes/image/line_white.png">
-                    </div> -->
-
-                </div>
-                <div [style.height]="lineResultHeight" class="line " id="line5">
-                    <img src="assets/fotunes/image/line_bg.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_dynamic_0_1.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_normal_0_1.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_normal_1_1.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_dynamic_1_1.png" class="img-normal">
-                    <!-- <div class="line-white">
-                        <img src="assets/fotunes/image/line_white.png">
-                    </div> -->
-
-                </div>
-                <div [style.height]="lineResultHeight" class="line " id="line4">
-                    <img src="assets/fotunes/image/line_bg.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_dynamic_0_1.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_normal_0_1.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_normal_1_1.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_dynamic_1_1.png" class="img-normal">
-                    <!-- <div class="line-white">
-                        <img src="assets/fotunes/image/line_white.png">
-                    </div> -->
-
-                </div>
-                <div [style.height]="lineResultHeight" class="line " id="line3">
-                    <img src="assets/fotunes/image/line_bg.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_dynamic_0_1.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_normal_0_1.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_normal_1_1.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_dynamic_1_1.png" class="img-normal">
-                    <!-- <div class="line-white">
-                        <img src="assets/fotunes/image/line_white.png">
-                    </div> -->
-
-                </div>
-                <div [style.height]="lineResultHeight" class="line " id="line2">
-                    <img src="assets/fotunes/image/line_bg.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_dynamic_0_1.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_normal_0_1.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_normal_1_1.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_dynamic_1_1.png" class="img-normal">
-                    <!-- <div class="line-white">
-                        <img src="assets/fotunes/image/line_white.png">
-                    </div> -->
-
-                </div>
-                <div [style.height]="lineResultHeight" class="line " id="line1">
-                    <img src="assets/fotunes/image/line_bg.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_dynamic_0_1.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_normal_0_1.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_normal_1_1.png" class="img-normal">
-                    <img src="assets/fotunes/image/line_dynamic_1_1.png" class="img-normal">
-                    <!-- <div class="line-white">
-                        <img src="assets/fotunes/image/line_white.png">
-                    </div> -->
-
-                </div>
-            </div>
-
-            <!-- ============image-background==================== -->
-            <div class="a1-content-center image-background" text-center>
-                <img src="assets/fotunes/image/result_effect.png" class="run-rotate-360-animate" id="imgresulteff">
-            </div>
-        </div>
-    </div>
-
-    <!-- ==========button-shuffer================= -->
-
-    <div class="btn-shuffer a1-absolute" margin-bottom>
-        <div class="a3-container-center a1-relative">
-            <div class="btn-shuffer-effect" id="btnShufferEffect">
-                <div class="sprite-container">
-                    <div class="sprite-animation btn-animate-idle">
-                        <div class="sprite-image" *ngFor="let image of effBtn">
-                            <img src="{{image}}">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="btn_done_1 a1-relative" tappable (click)="shuffSkeleton()">
-                <div [class.hideDiv]="isShuffer6" class="numberQue"><span>Hào </span> <span> {{numberQue}}</span></div>
-                <img src="assets/fotunes/image/btn_done_1.png" [class.hideDiv]="isShuffer6" id="btnDone">
-                <!-- <img src="assets/fotunes/image/btn_done_2.png" [class.hideDiv]="isShuffer6" class="btn-done-active" id="btnDoneActive"> -->
-            </div>
-        </div>
+      </div>
+      <img src="{{fotune.imageSrc}}" class="img-text">
     </div>
 
 
-    <!-- ===============Bottom bar================ -->
-    <div class="a1-container-bottom">
-        <div class="background-footer height-footer a3-container a1-relative a1-z-10">
-            <div class="a1-absolute botbar1"></div>
-            <ion-fab>
-                <button ion-fab class="btn-fab" (click)="activeMore()">
-                    <ion-icon name="arrow-dropleft"></ion-icon>
-                </button>
-                <ion-fab-list side="top">
-                    <div ion-fab class="item-fab" tappable (click)="viewInfo()">
-                        <img src="assets/fotunes/image/btn_info_1.png" alt="">
-                    </div>
-                    <a [href]="storeUrl" tappable>
-                        <div ion-fab class="item-fab">
-                            <img src="assets/fotunes/image/btn_game_1.png" alt="">
-                        </div>
-                    </a>
-                </ion-fab-list>
-            </ion-fab>
-            <div class="btn more-button a1-width-20" text-left>
-                <img src="assets/fotunes/image/btn_more_1.png" alt="">
-                <img src="assets/fotunes/image/btn_more_2.png" class="img-more-active" id="imgMoreActive">
-            </div>
-            <div class="notice a1-width-60 a3-container-center" text-center>
-                <span>Gieo liên tục <span style="color: #f9d96d">6 quẻ</span> để hoàn thành 1 quẻ Bói Dịch</span>
-            </div>
+    <div class="a-page-result a3-container-center">
+      <!-- ==============line-efff=================== -->
 
-
-            <div class="btn facebook-button a1-width-20" text-right tappable>
-                <a [href]="facebookUrl">
-                    <img src="assets/fotunes/image/btn_facebook_1.png" alt="">
-                </a>
+      <div class="a-page-result-effect" >
+        <div class="sprite-container">
+          <div class="sprite-animation eff-rs-start-animate">
+            <div class="sprite-image" *ngFor="let image of resultStartPath">
+              <img src="{{image}}">
             </div>
+          </div>
         </div>
+      </div>
+
+      <!-- ==================line-height js in contructor==================== -->
+      <div class="a-page-line-container" >
+        <div  class="line " id="line6">
+          <img src="assets/fotunes/image/line_bg.png" class="img-normal">
+          <img src="assets/fotunes/image/line_dynamic_0_1.png" class="img-normal">
+          <img src="assets/fotunes/image/line_normal_0_1.png" class="img-normal">
+          <img src="assets/fotunes/image/line_normal_1_1.png" class="img-normal">
+          <img src="assets/fotunes/image/line_dynamic_1_1.png" class="img-normal">
+          <!-- <div class="line-white">
+                        <img src="assets/fotunes/image/line_white.png">
+                    </div> -->
+
+        </div>
+        <div  class="line " id="line5">
+          <img src="assets/fotunes/image/line_bg.png" class="img-normal">
+          <img src="assets/fotunes/image/line_dynamic_0_1.png" class="img-normal">
+          <img src="assets/fotunes/image/line_normal_0_1.png" class="img-normal">
+          <img src="assets/fotunes/image/line_normal_1_1.png" class="img-normal">
+          <img src="assets/fotunes/image/line_dynamic_1_1.png" class="img-normal">
+          <!-- <div class="line-white">
+                        <img src="assets/fotunes/image/line_white.png">
+                    </div> -->
+
+        </div>
+        <div  class="line " id="line4">
+          <img src="assets/fotunes/image/line_bg.png" class="img-normal">
+          <img src="assets/fotunes/image/line_dynamic_0_1.png" class="img-normal">
+          <img src="assets/fotunes/image/line_normal_0_1.png" class="img-normal">
+          <img src="assets/fotunes/image/line_normal_1_1.png" class="img-normal">
+          <img src="assets/fotunes/image/line_dynamic_1_1.png" class="img-normal">
+          <!-- <div class="line-white">
+                        <img src="assets/fotunes/image/line_white.png">
+                    </div> -->
+
+        </div>
+        <div  class="line " id="line3">
+          <img src="assets/fotunes/image/line_bg.png" class="img-normal">
+          <img src="assets/fotunes/image/line_dynamic_0_1.png" class="img-normal">
+          <img src="assets/fotunes/image/line_normal_0_1.png" class="img-normal">
+          <img src="assets/fotunes/image/line_normal_1_1.png" class="img-normal">
+          <img src="assets/fotunes/image/line_dynamic_1_1.png" class="img-normal">
+          <!-- <div class="line-white">
+                        <img src="assets/fotunes/image/line_white.png">
+                    </div> -->
+
+        </div>
+        <div  class="line " id="line2">
+          <img src="assets/fotunes/image/line_bg.png" class="img-normal">
+          <img src="assets/fotunes/image/line_dynamic_0_1.png" class="img-normal">
+          <img src="assets/fotunes/image/line_normal_0_1.png" class="img-normal">
+          <img src="assets/fotunes/image/line_normal_1_1.png" class="img-normal">
+          <img src="assets/fotunes/image/line_dynamic_1_1.png" class="img-normal">
+          <!-- <div class="line-white">
+                        <img src="assets/fotunes/image/line_white.png">
+                    </div> -->
+
+        </div>
+        <div  class="line " id="line1">
+          <img src="assets/fotunes/image/line_bg.png" class="img-normal">
+          <img src="assets/fotunes/image/line_dynamic_0_1.png" class="img-normal">
+          <img src="assets/fotunes/image/line_normal_0_1.png" class="img-normal">
+          <img src="assets/fotunes/image/line_normal_1_1.png" class="img-normal">
+          <img src="assets/fotunes/image/line_dynamic_1_1.png" class="img-normal">
+          <!-- <div class="line-white">
+                        <img src="assets/fotunes/image/line_white.png">
+                    </div> -->
+
+        </div>
+      </div>
+
+      <!-- ============image-background==================== -->
+      <div class="a1-content-center image-background" text-center>
+        <img src="assets/fotunes/image/result_effect.png" class="run-rotate-360-animate" id="imgresulteff">
+      </div>
     </div>
+  </div>
+  <!-- ==================under-ground================= -->
+  <div class="a-page-underground a3-container-center a1-relative">
+    <img src="assets/fotunes/image/large_circle.png" class="large-circle">
+
+    <div class="a1-content-center small-circle" text-center>
+      <img src="assets/fotunes/image/small_circle.png">
+    </div>
+    <!-- =========plate backgroung============ -->
+    <div class="a1-content-center plate" text-center [class.hideDiv]="isRunShuffe">
+      <img src="assets/fotunes/image/plate.png">
+    </div>
+    <div class="a1-content-center " text-center [class.hideDiv]="isRunShuffe">
+      <div class="a1-content-center plate-coin" id="plateCoinContainer">
+        <div class="coin">
+          <img src="{{coins[0]}}">
+        </div>
+        <div class="coin">
+          <img src="{{coins[1]}}">
+        </div>
+        <div class="coin">
+          <img src="{{coins[2]}}">
+        </div>
+      </div>
+      <img src="assets/fotunes/image/plate_cover.png" class="a1-relative" id="skeletonCover">
+    </div>
+    <!-- ==============plate animate============ -->
+    <div class="a1-content-center plate hideDiv" [class.showDiv]="isRunShuffe">
+      <div class="sprite-container">
+        <div class="sprite-animation " [class.run-skeleton-animate]="isRunShuffe">
+          <div class="sprite-image" *ngFor="let image of skeletonPath">
+            <img src="{{image}}">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- ==========button-shuffer================= -->
+
+  <div class="btn-shuffer a1-absolute" margin-bottom>
+    <div class="a3-container-center a1-relative">
+      <div class="btn-shuffer-effect" id="btnShufferEffect">
+        <div class="sprite-container">
+          <div class="sprite-animation btn-animate-idle">
+            <div class="sprite-image" *ngFor="let image of effBtn">
+              <img src="{{image}}">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="btn_done_1 a1-relative" tappable (click)="shuffSkeleton()">
+        <div [class.hideDiv]="isShuffer6" class="numberQue">
+          <span>Hào </span>
+          <span> {{numberQue}}</span>
+        </div>
+        <img src="assets/fotunes/image/btn_done_1.png" [class.hideDiv]="isShuffer6" id="btnDone">
+        <!-- <img src="assets/fotunes/image/btn_done_2.png" [class.hideDiv]="isShuffer6" class="btn-done-active" id="btnDoneActive"> -->
+      </div>
+    </div>
+  </div>
+
+
+  <!-- ===============Bottom bar================ -->
+  <div class="a1-container-bottom">
+    <div class="background-footer height-footer a3-container a1-relative a1-z-10">
+      <div class="a1-absolute botbar1"></div>
+      <ion-fab>
+        <button ion-fab class="btn-fab" (click)="activeMore()">
+          <ion-icon name="arrow-dropleft"></ion-icon>
+        </button>
+        <ion-fab-list side="top">
+          <div ion-fab class="item-fab" tappable (click)="viewInfo()">
+            <img src="assets/fotunes/image/btn_info_1.png" alt="">
+          </div>
+          <a [href]="storeUrl" tappable>
+            <div ion-fab class="item-fab">
+              <img src="assets/fotunes/image/btn_game_1.png" alt="">
+            </div>
+          </a>
+        </ion-fab-list>
+      </ion-fab>
+      <div class="btn more-button a1-width-20" text-left>
+        <img src="assets/fotunes/image/btn_more_1.png" alt="">
+        <img src="assets/fotunes/image/btn_more_2.png" class="img-more-active" id="imgMoreActive">
+      </div>
+      <div class="notice a1-width-60 a3-container-center" text-center>
+        <span>Gieo liên tục
+          <span style="color: #f9d96d">6 quẻ</span> để hoàn thành 1 quẻ Bói Dịch</span>
+      </div>
+
+
+      <div class="btn facebook-button a1-width-20" text-right tappable>
+        <a [href]="facebookUrl">
+          <img src="assets/fotunes/image/btn_facebook_1.png" alt="">
+        </a>
+      </div>
+    </div>
+  </div>
 
 </ion-content>
